--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div>
         
                     <div class="w-109 h-106 mx-auto bg-gray-200 bg-no-repeat bg-center bg-contain rounded-full"
-                        style="background-image: url('/image/user.jpg');">
+                        style="background-image: url('image/user.jpg');">
                     </div>
 
                 </div>
